<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gs355.dailytaskmanager.CreateNewTask$PlaceholderFragment"
    android:id="@+id/create_form">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/priorityView"
        android:layout_width="356dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/priority_heading" />

        <RadioGroup
            android:id="@+id/radioPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priorityHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/radio_priority_high" />


            <RadioButton
                android:id="@+id/priorityMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_priority_medium" />

            <RadioButton
                android:id="@+id/priorityLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_priority_low" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsView"
        android:layout_width="303dp"
        android:layout_height="166dp"
        android:layout_below="@id/priorityView"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/details_heading" />

        <EditText
            android:id="@+id/task_details"
            android:layout_width="250dp"
            android:layout_height="118dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/back"
            android:hint="Add task details"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dateView"
        android:layout_width="356dp"
        android:layout_below="@id/detailsView"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_heading"/>

        <DatePicker
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:endYear="2100"
            android:startYear="1900" />
    </LinearLayout>


</LinearLayout>
